--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* #f1a713 */
-
 :root {
     --yellow: #f1a713;
     --gray: #546962;
@@ -8,6 +6,19 @@
 body {
     font-family: "Noto Sans", sans-serif;
     font-optical-sizing: auto;
+    overflow-x: hidden;
+}
+
+p {
+    font-size: 18px !important;
+}
+
+.mission_header {
+    font-size: 50px;
+}
+
+.nav-color {
+    border-bottom: 1px solid var(--yellow);
 }
 
 .logo {
@@ -17,8 +28,8 @@ body {
 
 .section_1 {
     box-shadow: rgba(241, 167, 19, 0.5) 0px 25px 20px -20px;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .border_left_grey {
@@ -39,7 +50,7 @@ body {
     animation: rotating 4s linear infinite; /* Animation shorthand */
 }
 
-.text_logo{
+.text_logo {
     width: 100%;
     height: 250px;
 }
@@ -109,6 +120,7 @@ body {
 
 .service_header {
     color: var(--yellow);
+    font-size: 50px;
 }
 
 .services_img {
