--- a/services.css
+++ b/services.css
@@ -35,9 +35,10 @@ body {
 }
 
 .services_img {
-    width: 50%;
-    aspect-ratio: 1/1;
+    width: 100%;
+    aspect-ratio: 5/3;
     margin-right: 10px;
+    object-fit: cover;
 }
 
 .card {
