--- a/style.css
+++ b/style.css
@@ -124,8 +124,9 @@ p {
 }
 
 .services_img {
-    width: 50%;
-    aspect-ratio: 1/1;
+    width: 60%;
+    aspect-ratio: 5/3;
+    object-fit: cover;
     margin-right: 10px;
 }
 
