--- a/style.css
+++ b/style.css
@@ -29,12 +29,6 @@ p {
     border-radius: 10px;
 }
 
-.logo_header {
-    font-size: 50px;
-    font-weight: 700;
-    padding-left: 20px;
-}
-
 .grey_border {
     border-left: 5px solid var(--gray);
 }
@@ -44,10 +38,12 @@ p {
     padding-top: 10%;
     padding-bottom: 10%;
     background-image: url("./assets//home_bg.jpg");
-    background-position: right;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    width: 100%;
+    aspect-ratio: 16/7;
 }
 
 .border_left_grey {
@@ -56,6 +52,7 @@ p {
 }
 
 .logo_header {
+    padding-left: 20px;
     font-size: 70px;
     font-weight: 700;
     background-color: rgba(84, 105, 98, 0.25) !important;
@@ -63,6 +60,7 @@ p {
 }
 
 .spin {
+    height: 210px;
     aspect-ratio: 1/1;
     transform: rotateY(360deg); /* Standard syntax */
     transition-duration: 4s; /* Standard syntax */
@@ -140,13 +138,8 @@ p {
 }
 
 .parallax {
-    /* The image used */
     background-image: url("./assets/circuit.jpg");
-
-    /* Set a specific height */
     min-height: 500px;
-
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -189,4 +182,44 @@ footer {
     text-decoration: none;
     color: black;
     font-size: 20px;
+}
+
+/* mobile screens */
+@media only screen and (max-device-width: 425px) {
+    .section_1 {
+        height: 400px;
+        padding-top: 150px;
+    }
+
+    .logo_header {
+        font-size: 30px;
+    }
+
+    .spin {
+        height: 100px;
+    }
+}
+
+/* mobile - tab screens */
+@media only screen and (min-device-width: 426px) and (max-device-width: 767px) {
+    .section_1 {
+        height: 400px;
+        padding-top: 150px;
+    }
+
+    .logo_header {
+        font-size: 30px;
+    }
+
+    .spin {
+        height: 100px;
+    }
+}
+
+/* tab - ipad screens */
+@media only screen and (min-device-width: 768px) and (max-device-width: 900px) {
+}
+
+/* bootstrap col inbuilt layout */
+@media only screen and (min-device-width: 900px) and (max-device-width: 991px) {
 }
