--- a/services.css
+++ b/services.css
@@ -90,3 +90,19 @@ footer {
     color: black;
     font-size: 20px;
 }
+
+/* mobile screens */
+@media only screen and (max-device-width: 425px) {
+    .section_1 {
+        height: 400px !important;
+        padding-top: 100px !important;
+    }
+}
+
+/* mobile - tab screens */
+@media only screen and (min-device-width: 426px) and (max-device-width: 767px) {
+    .section_1 {
+        height: 400px !important;
+        padding-top: 100px !important;
+    }
+}
