--- a/about.css
+++ b/about.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: "Azeret Mono", monospace;
+    font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
     overflow-x: hidden;
