--- a/contact.css
+++ b/contact.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: "Azeret Mono", monospace;
+    font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
     overflow-x: hidden;
